testdata/corset/invalid/computedcolumn_invalid_06.lisp
;;error:2:21-25:input columns cannot be recursive
(defcolumns (X :i16 :fwd))
